src/test/ui/parser/issues/issue-87217-keyword-order/several-kw-jump.stderr
error: expected one of `extern` or `fn`, found keyword `const`
  --> $DIR/several-kw-jump.rs:9:14
   |
LL | async unsafe const fn test() {}
   | -------------^^^^^
   | |            |
   | |            expected one of `extern` or `fn`
   | help: `const` must come before `async unsafe`: `const async unsafe`
   |
   = note: keyword order for functions declaration is `default`, `pub`, `const`, `async`, `unsafe`, `extern`

error: aborting due to previous error

